upload layout for performance site. Change background for index. To fix: overflow-x

--- a/main.css
+++ b/main.css
@@ -99,7 +99,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000114', end
 		}
 
 		#site-container {
-			background: rgba(255,255,255,.08);
+			background: rgba(25, 60, 100,.5);
 			
 			
 
